# postgres-agentic-advisor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  WALKTHROUGH.md  azure.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  startup.sh
backend/src/: database.py  lifespan_manager.py  main.py
backend/src/agents/: __init__.py  ask_ai_agent.py  askai_planner_agent.py  brief_agent.py  edit_ai_agent.py  financial_analysis_agent.py  news_synthesizer_agent.py  planning_agent.py  risk_insight_agent.py  sec_filing_analysis_agent.py  stock_analysis_agent.py
backend/src/configs/: config.py  rag_questions.py  vector_store_config.py
backend/src/core/: azure_auth.py  dependencies.py  exceptions.py  middlewares.py
backend/src/db_setup/: __init__.py  extensions.py  load_graph.py  reset.py  schema.py  seed_data.py  seed_mem0.py  setup.py  supply_chain.py  vector_stores.py
backend/src/models/: __init__.py  account_holdings.py  alert_sources.py  alerts.py  askai_chat_analysis_cache.py  chat_sessions.py  clients.py  meetings.py  securities.py  security_prices.py  suggested_responses.py  users.py  workflow_trigger.py
backend/src/prompts/: __init__.py  alert_response_format_prompt.py  ask_ai_chat_agent_prompt.py  askai_planner_agent_prompt.py  brief_agent_prompt.py  chat_title_generation_prompt.py  edit_ai_agent_prompt.py  financial_analysis_agent_prompt.py  news_synthesizer_agent_prompt.py  planning_agent_prompt.py  risk_insight_agent_prompt.py  risk_profile_classifier_prompt.py  sec_filing_analysis_agent_prompt.py  stock_analysis_agent_prompt.py
(+405 files in other folders)
