[tool.poetry]
name = "agentic advisor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = ">=0.135.2"
uvicorn = "^0.36.0"
azure-identity = "^1.25.0"
pydantic = {extras = ["email"], version = "^2.11.10"}
pydantic-settings = "^2.10.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
llama-index-tools-mcp = "^0.4.1"
langchain-openai = "^1.1.7"
langchain = "^1.2.8"
langchain-community = "^0.4.1"
pypdf = "^6.7.1"
psycopg-pool = "^3.3.0"
openinference-instrumentation-langchain = "^0.1.61"
pytz = "^2026.1.post1"
arize-phoenix-otel = ">=0.6.0"
arize-phoenix-client = ">=0.1.0"
arize-phoenix-evals = "^3.0.0"
rapidfuzz = "^3.14.5"
langchain-azure-postgresql = "^1.0.1"
mem0ai = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = ">=26.3.1"
pylint = "^3.3.8"
isort = "^6.0.1"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
